# ytmusic-rs

./: Cargo.toml
src/: client.rs  error.rs  json_ext.rs  lib.rs
src/models/: mod.rs
src/parser/: mod.rs
src/requests/: browse.rs  library.rs  mod.rs  playlist.rs  search.rs
tests/: browse.rs  client_builder.rs  fetch_visitor_id.rs  library.rs  playlist.rs  search.rs
