[package]
name = "ytmusic"
version = "0.1.0"
authors = ["Max Jöhnk <maxjoehnk@gmail.com>"]
edition = "2021"

[dependencies]
thiserror = "1"
surf = { version = "2.3", default-features = false, features = ["curl-client"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10"
base16ct = { version = "0.1", features = ["alloc"] }
headers = "0.3"
http = "0.2.8"
regex = "1.6"

[dev-dependencies]
futures = { version = "0.3", features = ["executor"] }
